// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddIps renders correctly when user reaches max ip limit 1`] = `
<form
  noValidate={true}
>
  <Panel
    actions={
      Array [
        Object {
          "Component": [Function],
          "color": "orange",
          "content": "Manage Your IPs",
          "to": "/account/ip-pools",
        },
      ]
    }
    title="Add Dedicated IPs"
  >
    <Panel.Section>
      <p>
        Dedicated IPs give you better control over your sending reputation. 
      </p>
      <Field
        autoFocus={true}
        component={[Function]}
        disabled={true}
        errorInLabel={true}
        helpText={
          <span>
            You cannot currently add any more IPs
          </span>
        }
        label="Quantity"
        max={0}
        min="1"
        name="quantity"
        required={true}
        type="number"
        validate={
          Array [
            [Function],
            [Function],
            [Function],
            [Function],
          ]
        }
      />
      <Connect(IpPoolSelect)
        disabled={true}
        formName="add-sending-ips"
      />
    </Panel.Section>
    <Panel.Section>
      <Button
        disabled={true}
        primary={true}
        size="default"
        type="submit"
      >
        Add Dedicated IPs
      </Button>
      <Button
        size="default"
      >
        Cancel
      </Button>
    </Panel.Section>
  </Panel>
</form>
`;

exports[`AddIps renders correctly with default props 1`] = `
<form
  noValidate={true}
>
  <Panel
    actions={
      Array [
        Object {
          "Component": [Function],
          "color": "orange",
          "content": "Manage Your IPs",
          "to": "/account/ip-pools",
        },
      ]
    }
    title="Add Dedicated IPs"
  >
    <Panel.Section>
      <p>
        Dedicated IPs give you better control over your sending reputation. 
      </p>
      <Field
        autoFocus={true}
        component={[Function]}
        disabled={false}
        errorInLabel={true}
        helpText={
          <span>
            You can add up to 
            4
             total dedicated IPs to your plan for 
            <DedicatedIpCost
              plan={Object {}}
              quantity="1"
            />
             each.
          </span>
        }
        label="Quantity"
        max={4}
        min="1"
        name="quantity"
        required={true}
        type="number"
        validate={
          Array [
            [Function],
            [Function],
            [Function],
            [Function],
          ]
        }
      />
      <Connect(IpPoolSelect)
        disabled={false}
        formName="add-sending-ips"
      />
    </Panel.Section>
    <Panel.Section>
      <Button
        disabled={false}
        primary={true}
        size="default"
        type="submit"
      >
        Add Dedicated IPs
      </Button>
      <Button
        size="default"
      >
        Cancel
      </Button>
    </Panel.Section>
  </Panel>
</form>
`;

exports[`AddIps renders free ip elements when included in plan 1`] = `
<form
  noValidate={true}
>
  <Panel
    actions={
      Array [
        Object {
          "Component": [Function],
          "color": "orange",
          "content": "Manage Your IPs",
          "to": "/account/ip-pools",
        },
      ]
    }
    title="Add Dedicated IPs"
  >
    <Panel.Section>
      <p>
        Dedicated IPs give you better control over your sending reputation. 
        <span>
          <strong>
            Your plan includes one free dedicated IP address.
          </strong>
           If claimed, your account statement will show a charge with a matching refund.
        </span>
      </p>
      <Field
        autoFocus={true}
        component={[Function]}
        disabled={false}
        errorInLabel={true}
        helpText={
          <span>
            You can add up to 
            4
             total dedicated IPs to your plan for 
            <DedicatedIpCost
              plan={
                Object {
                  "includesIp": true,
                }
              }
              quantity="1"
            />
             each.
          </span>
        }
        label="Quantity"
        max={4}
        min="1"
        name="quantity"
        required={true}
        type="number"
        validate={
          Array [
            [Function],
            [Function],
            [Function],
            [Function],
          ]
        }
      />
      <Connect(IpPoolSelect)
        disabled={false}
        formName="add-sending-ips"
      />
    </Panel.Section>
    <Panel.Section>
      <Button
        disabled={false}
        primary={true}
        size="default"
        type="submit"
      >
        Add Dedicated IPs
      </Button>
      <Button
        size="default"
      >
        Cancel
      </Button>
    </Panel.Section>
  </Panel>
</form>
`;
